# PrimeOrbit

./: .gitignore  CMakeLists.txt  README.md
include/: prime_checker.hpp  prime_factorizer.hpp
src/: CMakeLists.txt  main.cpp  prime_checker.cpp  prime_factorizer.cpp
tests/: CMakeLists.txt  test_prime_checker.cpp  test_prime_factorizer.cpp
